src/test/deca/context/valid/without_class/int_bin_exp_float.deca
// Description:
// 	  Opère sur un entier à gauche avec un flottant à droite
// 	
// Resultats:
// 	  5.00000e+00
// Historique:
// 	  cree le /01/2023
{
    int a = 2;
    float b = 3;
    float c = a + b;
    print(c);
}